--- a/project.ipynb
+++ b/project.ipynb
@@ -23,7 +23,7 @@
     }
    ],
    "source": [
-    "%pip install numpy pandas scikit-learn tqdm seaborn matplotlib xgboost deap imbalanced-learn --quiet"
+    "%pip install numpy pandas scikit-learn seaborn matplotlib xgboost deap imbalanced-learn --quiet"
    ]
   },
   {
@@ -44,19 +44,21 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import seaborn as sns\n",
-    "from tqdm import tqdm\n",
+    "\n",
+    "from imblearn.over_sampling import SMOTE\n",
+    "from imblearn.under_sampling import RandomUnderSampler\n",
     "\n",
     "from sklearn.preprocessing import LabelEncoder, MinMaxScaler\n",
     "from sklearn.impute import SimpleImputer\n",
-    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.model_selection import train_test_split, GridSearchCV\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score, confusion_matrix\n",
-    "from sklearn.metrics import confusion_matrix\n",
-    "from sklearn.metrics import ConfusionMatrixDisplay\n",
+    "from sklearn.metrics import confusion_matrix, ConfusionMatrixDisplay\n",
     "\n",
     "import xgboost as xgb\n",
     "from deap import base, creator, tools, gp, algorithms\n",
+    "\n",
     "\n",
     "import matplotlib.pyplot as plt"
    ]
@@ -1780,9 +1782,6 @@
     }
    ],
    "source": [
-    "from sklearn.model_selection import train_test_split\n",
-    "import pandas as pd\n",
-    "\n",
     "data = pd.DataFrame(data, columns=columns)\n",
     "\n",
     "X = data.drop(\"Label\", axis=1)\n",
@@ -1823,10 +1822,6 @@
     }
    ],
    "source": [
-    "from imblearn.over_sampling import SMOTE\n",
-    "from imblearn.under_sampling import RandomUnderSampler\n",
-    "import pandas as pd\n",
-    "\n",
     "print(\"Original class distribution:\\n\", y_train.value_counts())\n",
     "\n",
     "smote = SMOTE(sampling_strategy=0.8, random_state=42)\n",
@@ -1978,9 +1973,6 @@
     }
    ],
    "source": [
-    "from sklearn.model_selection import GridSearchCV\n",
-    "import xgboost as xgb\n",
-    "\n",
     "param_grid = {\n",
     "    'max_depth': [4, 6],\n",
     "    'learning_rate': [0.05, 0.1],\n",
@@ -2385,49 +2377,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'Random Forest': {'Accuracy': 0.8317771476991266,\n",
-       "  'Precision': np.float64(0.7330878416031994),\n",
-       "  'Recall': np.float64(0.7990995390497516),\n",
-       "  'F1': np.float64(0.7646716892531087),\n",
-       "  'Time': 753.5860948562622,\n",
-       "  'Time Prediction': 10.448572635650635},\n",
-       " 'XGBoost': {'Accuracy': 0.8314919827923347,\n",
-       "  'Precision': np.float64(0.7242751982476279),\n",
-       "  'Recall': np.float64(0.8191693366842551),\n",
-       "  'F1': np.float64(0.7688051242496395),\n",
-       "  'Time': 1.9939377307891846,\n",
-       "  'Time Prediction': 0.0970010757446289},\n",
-       " 'DEAP Simple': {'Accuracy': 0.6453404054230217,\n",
-       "  'Precision': np.float64(0.48623046875),\n",
-       "  'Recall': np.float64(0.6523458437057065),\n",
-       "  'F1': np.float64(0.557170251834972),\n",
-       "  'Time': 1351.3653874397278,\n",
-       "  'Time Prediction': 0.9595301151275635},\n",
-       " 'DEAP Plus Lambda': {'Accuracy': 0.6576880458871073,\n",
-       "  'Precision': np.float64(0.49966224894631184),\n",
-       "  'Recall': np.float64(0.6255344998034709),\n",
-       "  'F1': np.float64(0.5555579063174375),\n",
-       "  'Time': 1239.173790693283,\n",
-       "  'Time Prediction': 2.0064895153045654}}"
-      ]
-     },
-     "execution_count": 60,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "results"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 57,
    "metadata": {},
    "outputs": [
@@ -2473,10 +2422,8 @@
     "models = list(results.keys())\n",
     "metrics = [\"Accuracy\", \"Precision\", \"Recall\", \"F1\"]\n",
     "\n",
-    "# Create a 2-row, 2-column subplot grid for the four metrics\n",
     "fig, axes = plt.subplots(1, 2, figsize=(16, 6))\n",
     "\n",
-    "# Plot Accuracy and Precision in the first row\n",
     "for i, metric in enumerate(metrics[:2]):\n",
     "    axes[i].bar(models, [results[model][metric] for model in models])\n",
     "    axes[i].set_title(f'{metric} Comparison')\n",
@@ -2485,29 +2432,24 @@
     "    \n",
     "fig, axes = plt.subplots(1, 2, figsize=(16, 6))\n",
     "\n",
-    "# Plot Recall and F1 in the second row\n",
     "for i, metric in enumerate(metrics[2:]):\n",
     "    axes[i].bar(models, [results[model][metric] for model in models])\n",
     "    axes[i].set_title(f'{metric} Comparison')\n",
     "    axes[i].set_ylabel(metric)\n",
     "    axes[i].set_ylim(0, 1)\n",
     "\n",
-    "# Create separate 1-row, 2-column plots for Time and Time Prediction\n",
     "fig_time, (ax_time, ax_time_prediction) = plt.subplots(1, 2, figsize=(16, 6))\n",
     "\n",
-    "# Plot Time\n",
     "ax_time.bar(models, [results[model][\"Time\"] for model in models])\n",
     "ax_time.set_title('Time Comparison')\n",
     "ax_time.set_ylabel('Time (seconds)')\n",
     "ax_time.set_ylim(0, max(results[model][\"Time\"] for model in models) + 10)\n",
     "\n",
-    "# Plot Time Prediction\n",
     "ax_time_prediction.bar(models, [results[model][\"Time Prediction\"] for model in models])\n",
     "ax_time_prediction.set_title('Time Prediction Comparison')\n",
     "ax_time_prediction.set_ylabel('Time (seconds)')\n",
     "ax_time_prediction.set_ylim(0, max(results[model][\"Time Prediction\"] for model in models) + 10)\n",
     "\n",
-    "# Adjust layout to prevent overlapping of labels\n",
     "plt.tight_layout()\n",
     "fig_time.tight_layout()\n",
     "\n",
